samples/_failures_safe/1761074609_9e3e18_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9394fbfc.c: In function ‘main’:
./samples/SAFE/__tmp_9394fbfc.c:178:9: error: expected expression at end of input
  178 |         printf("Final token %d: ", k +
      |         ^~~~~~
./samples/SAFE/__tmp_9394fbfc.c:178:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9394fbfc.c:178:9: error: expected declaration or statement at end of input
